; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_signal.c_deliver_signal.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_signal.c_deliver_signal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.siginfo_ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @deliver_signal(%struct.task* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.siginfo_, align 4
  %5 = alloca %struct.task*, align 8
  %6 = alloca i32, align 4
  %7 = getelementptr inbounds %struct.siginfo_, %struct.siginfo_* %4, i32 0, i32 0
  store i32 %2, i32* %7, align 4
  store %struct.task* %0, %struct.task** %5, align 8
  store i32 %1, i32* %6, align 4
  %8 = load %struct.task*, %struct.task** %5, align 8
  %9 = getelementptr inbounds %struct.task, %struct.task* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = call i32 @lock(i32* %11)
  %13 = load %struct.task*, %struct.task** %5, align 8
  %14 = load i32, i32* %6, align 4
  %15 = getelementptr inbounds %struct.siginfo_, %struct.siginfo_* %4, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @deliver_signal_unlocked(%struct.task* %13, i32 %14, i32 %16)
  %18 = load %struct.task*, %struct.task** %5, align 8
  %19 = getelementptr inbounds %struct.task, %struct.task* %18, i32 0, i32 0
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = call i32 @unlock(i32* %21)
  ret void
}

declare dso_local i32 @lock(i32*) #1

declare dso_local i32 @deliver_signal_unlocked(%struct.task*, i32, i32) #1

declare dso_local i32 @unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
